@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T08:20:46Z",
+  "timestamp" : "2022-07-14T16:11:36Z",
   "count_outdated" : 1702,
   "uniques_outdated" : 107,
-  "count" : 1710,
-  "uniques" : 111,
+  "count" : 1712,
+  "uniques" : 112,
   "views" : [
     {
       "timestamp": "2022-07-03T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 5,
       "count_minmax": [ 5, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
