@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 10,
   "uniques": 1,
   "views": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
