@@ -1,3 +1,10 @@
+2022-07-14T16:11:36Z:
+* notice: last 14d: unq all: 1 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 107 1702 / 111 1710
+* notice: next accum: outdated-unq outdated-all / unq all: 107 1702 / 112 1712
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-14]
+
 2022-07-12T08:20:46Z:
 * notice: last 14d: unq all: 1 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 107 1702 / 110 1705
